@@ -34,8 +34,11 @@
     <mapstruct.version>1.4.2.Final</mapstruct.version>
     <fxgraphics2d.version>2.1.3</fxgraphics2d.version>
     <controlsfx.version>11.1.1</controlsfx.version>
-    <org.openjfx.javafx-maven-plugin.version>0.0.4</org.openjfx.javafx-maven-plugin.version>
+    <org.openjfx.javafx-maven-plugin.version>0.0.8</org.openjfx.javafx-maven-plugin.version>
     <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+    <maven-compiler-plugin.maxHeapSize>256M</maven-compiler-plugin.maxHeapSize>
+    <java.awt.headless>false</java.awt.headless>
+    <test.argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</test.argLine>
   </properties>
 
   <dependencyManagement>
@@ -68,11 +71,6 @@
       <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-controls</artifactId>
-        <version>${javafx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-graphics</artifactId>
         <version>${javafx.version}</version>
       </dependency>
       <dependency>
@@ -270,28 +268,24 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>flatten-maven-plugin</artifactId>
-          <version>1.2.2</version>
+          <version>1.2.3</version>
         </plugin>
         <plugin>
           <groupId>com.github.ekryd.sortpom</groupId>
           <artifactId>sortpom-maven-plugin</artifactId>
-          <version>2.15.0</version>
+          <version>3.0.0</version>
         </plugin>
         <plugin>
           <groupId>com.diffplug.spotless</groupId>
           <artifactId>spotless-maven-plugin</artifactId>
-          <version>2.20.0</version>
+          <version>2.22.1</version>
         </plugin>
         <plugin>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-maven-plugin</artifactId>
           <version>${org.openjfx.javafx-maven-plugin.version}</version>
           <inherited>true</inherited>
-          <configuration>
-            <source>${maven.compiler.source}</source>
-            <target>${maven.compiler.target}</target>
-            <release>${java.version}</release>
-          </configuration>
+          <configuration></configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -301,17 +295,23 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
-          <version>2.7</version>
+          <version>2.8.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
+          <version>3.0.0-M5</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>3.0.0-M5</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>3.0.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -319,39 +319,31 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>flatten</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>flatten</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>flatten.clean</id>
-            <phase>clean</phase>
-            <goals>
-              <goal>clean</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
           <updatePomFile>true</updatePomFile>
           <!--flattenMode>resolveCiFriendliesOnly</flattenMode -->
           <flattenMode>oss</flattenMode>
         </configuration>
+        <executions>
+          <execution>
+            <id>flatten</id>
+            <goals>
+              <goal>flatten</goal>
+            </goals>
+            <phase>process-resources</phase>
+          </execution>
+          <execution>
+            <id>flatten.clean</id>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+            <phase>clean</phase>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>com.github.ekryd.sortpom</groupId>
         <artifactId>sortpom-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>verify</phase>
-            <goals>
-              <goal>${pom.fmt.action}</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
           <skip>${pom.fmt.skip}</skip>
           <pomFile>pom.xml</pomFile>
@@ -361,18 +353,18 @@
           <verifyFail>stop</verifyFail>
           <verifyFailOn>strict</verifyFailOn>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>${pom.fmt.action}</goal>
+            </goals>
+            <phase>verify</phase>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>validate</phase>
-            <goals>
-              <goal>${spotless.action}</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
           <java>
             <googleJavaFormat>
@@ -385,18 +377,25 @@
             <indexFile>${project.basedir}/.spotless-index</indexFile>
           </upToDateChecking>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>${spotless.action}</goal>
+            </goals>
+            <phase>validate</phase>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <release>${java.version}</release>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
           <debug>true</debug>
           <encoding>UTF-8</encoding>
-          <compilerArgs></compilerArgs>
           <fork>true</fork>
+          <maxmem>${maven-compiler-plugin.maxHeapSize}</maxmem>
+          <compilerArgs></compilerArgs>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
@@ -407,17 +406,28 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>--illegal-access=permit</argLine>
+          <runOrder>alphabetical</runOrder>
+          <includes>
+            <include>**/*Test.java</include>
+          </includes>
+          <excludes>
+            <exclude>${test.exclude.pattern}</exclude>
+          </excludes>
+          <forkMode>once</forkMode>
+          <enableAssertions>true</enableAssertions>
+          <printSummary>true</printSummary>
+          <testFailureIgnore>${allow.test.failure.ignore}</testFailureIgnore>
+          <excludedGroups>${test.excludedGroups}</excludedGroups>
+          <argLine>@{test.argLine}</argLine>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
-          <argLine>--illegal-access=permit</argLine>
+          <argLine>@{test.argLine}</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -432,7 +442,7 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>3.6.1</version>
+                  <version>3.8.1</version>
                 </requireMavenVersion>
               </rules>
             </configuration>
@@ -445,6 +455,11 @@
         <configuration>
           <generateBackupPoms>false</generateBackupPoms>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.3.0</version>
       </plugin>
     </plugins>
   </build>
